done some analysis, starting classical

--- a/implementation/analysis.ipynb
+++ b/implementation/analysis.ipynb
@@ -75,8 +75,8 @@
     "young_group = data[data['Age in years'] <= 25]\n",
     "aged_group = data[data['Age in years'] > 25]\n",
     "\n",
-    "# for i in range(20):\n",
-    "#     print(aged_group.iloc[:, i].value_counts())\n",
+    "for i in range(21):\n",
+    "    print(young_group.iloc[:, i].value_counts())\n",
     "\n",
     "g = 'Duration in month'\n",
     "print(aged_group[g].mean())\n",
@@ -86,13 +86,13 @@
    "metadata": {
     "tags": []
    },
-   "execution_count": 73,
+   "execution_count": 80,
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "20.96786155747837\n144.53856980259212\n"
+      "A11    68\nA12    62\nA14    50\nA13    10\nName: Status of existing checking account, dtype: int64\n12    37\n24    34\n18    24\n15    17\n9     13\n36    11\n6     10\n30     9\n48     8\n10     4\n45     3\n21     3\n60     3\n39     2\n27     2\n13     2\n8      1\n72     1\n20     1\n11     1\n14     1\n22     1\n33     1\n4      1\nName: Duration in month, dtype: int64\nA32    137\nA34     33\nA31      8\nA33      7\nA30      5\nName: Credit history, dtype: int64\nA43    64\nA42    52\nA40    32\nA41    14\nA49    10\nA46     7\nA45     6\nA44     4\nA48     1\nName: Purpose, dtype: int64\n1258     2\n1275     2\n2039     2\n433      2\n3913     1\n        ..\n5152     1\n932      1\n674      1\n11560    1\n1282     1\nName: Credit amount, Length: 186, dtype: int64\nA61    123\nA65     28\nA62     22\nA63     11\nA64      6\nName: Savings account/bonds, dtype: int64\nA73    78\nA72    54\nA74    36\nA75    13\nA71     9\nName: Present employment since, dtype: int64\n4    82\n2    48\n1    33\n3    27\nName: Installment rate in percentage of disposable income, dtype: int64\nA92    105\nA93     56\nA94     27\nA91      2\nName: Personal status and sex, dtype: int64\nA101    170\nA103     11\nA102      9\nName: Other debtors / guarantors, dtype: int64\n4    84\n2    59\n1    30\n3    17\nName: Present residence since, dtype: int64\nA123    71\nA121    60\nA122    47\nA124    12\nName: Property, dtype: int64\n23    48\n24    44\n25    41\n22    27\n21    14\n20    14\n19     2\nName: Age in years, dtype: int64\nA143    161\nA141     20\nA142      9\nName: Other installment plans, dtype: int64\nA152    106\nA151     79\nA153      5\nName: Housing, dtype: int64\n1    145\n2     44\n3      1\nName: Number of existing credits at this bank, dtype: int64\nA173    138\nA172     42\nA174      5\nA171      5\nName: Job, dtype: int64\n1    184\n2      6\nName: Number of people being liable to provide maintenance for, dtype: int64\nA191    145\nA192     45\nName: Telephone, dtype: int64\nA201    187\nA202      3\nName: foreign worker, dtype: int64\n1    110\n2     80\nName: label, dtype: int64\n20.96786155747837\n144.53856980259212\n"
      ]
     }
    ]
