--- a/implementation/classical_implementation.ipynb
+++ b/implementation/classical_implementation.ipynb
@@ -28,14 +28,22 @@
  "cells": [
   {
    "source": [
-    "# Classical Implementation "
+    "# Classical Implementation\n",
+    "In this notebook I have trained a classical (and likely biased) machine learning model on the original dataset"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## 1.1 Read in the data and export it as a CSV"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,22 +52,32 @@
     "with open('../german-credit-dataset/german.data-numeric', 'r') as infile:\n",
     "    data_contents = infile.read()    \n",
     "    data_contents = re.sub(r'[ ]+', \",\", data_contents)\n",
-    "    data_contents = re.sub(r'^,|\\n,|,\\n', \"\\n\", data_contents)\n",
+    "    data_contents = re.sub(r'^,', \"\", data_contents)\n",
+    "    data_contents = re.sub(r'\\n,', \"\\n\", data_contents)\n",
+    "    data_contents = re.sub(r',\\n', \"\\n\", data_contents)\n",
+    "    # data_contents = re.sub(r'^,|\\n,|,\\n', \"\\n\", data_contents)\n",
     "\n",
     "    with open('../german-credit-dataset/german-numeric.csv', 'w') as outfile:\n",
     "        outfile.write(data_contents)"
    ]
   },
   {
+   "source": [
+    "## 1.2 Add column names to the data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "data read in and labels applied\n"
+      "data read in and column names applied\n"
      ]
     }
    ],
@@ -67,7 +85,7 @@
     "import pandas as pd\n",
     "\n",
     "# data = pd.read_csv('../german-credit-dataset/german.csv')\n",
-    "data = pd.read_csv('../german-credit-dataset/german-numeric.csv')\n",
+    "data = pd.read_csv('../german-credit-dataset/german-numeric.csv', header=None)\n",
     "data.columns = [\n",
     "    'A1',\n",
     "    'A2',\n",
@@ -97,12 +115,36 @@
     "]\n",
     "\n",
     "\n",
-    "print('data read in and labels applied')"
+    "print('data read in and column names applied')"
    ]
   },
   {
+   "source": [
+    "## 1.3 Encode the age data as Young (0) and Aged (1)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.loc[data.A13 <= 25, \"A13\"] = 0\n",
+    "data.loc[data.A13 > 25, \"A13\"] = 1"
+   ]
+  },
+  {
+   "source": [
+    "## 1.4 Split the data into Features and labels and into training and testing"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,8 +157,15 @@
    ]
   },
   {
+   "source": [
+    "## 2.1 Train a Naive Bayes model"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +176,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 75
+     "execution_count": 209
     }
    ],
    "source": [
@@ -138,8 +187,15 @@
    ]
   },
   {
+   "source": [
+    "## 2.2 Evaluate the model"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,30 +204,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Classification report for Naive Bayes (0:died, 1:recovered):\n              precision    recall  f1-score   support\n\n        died       0.88      0.79      0.83       217\n   recovered       0.57      0.71      0.63        83\n\n  \n"
+      "Accuracy of the Naive Bayes classifier 0.7266666666666667\n\nClassification report for Naive Bayes (0:died, 1:recovered):\n              precision    recall  f1-score   support\n\n        Good       0.85      0.75      0.80       214\n         Bad       0.52      0.67      0.59        86\n\n  \n"
      ]
     }
    ],
    "source": [
     "from sklearn import metrics\n",
     "\n",
+    "print(f'Accuracy of the Naive Bayes classifier {metrics.accuracy_score(y_test, nb_predictions)}\\n')\n",
+    "\n",
     "print(f'Classification report for Naive Bayes (0:died, 1:recovered):')\n",
-    "print(metrics.classification_report(y_test, nb_predictions, target_names=['died','recovered'])[:166])"
+    "print(metrics.classification_report(y_test, nb_predictions, target_names=['Good','Bad'])[:166])"
+   ]
+  },
+  {
+   "source": [
+    "# Fairness adjustment"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[3.24721995e-01 6.75278005e-01]\n [1.00000000e+00 3.48465693e-11]\n [9.79243740e-01 2.07562596e-02]\n [7.77353687e-01 2.22646313e-01]\n [2.28606178e-02 9.77139382e-01]\n [4.93996034e-01 5.06003966e-01]\n [6.57806245e-01 3.42193755e-01]\n [8.53883342e-01 1.46116658e-01]\n [9.97970908e-01 2.02909234e-03]\n [5.05790104e-02 9.49420990e-01]]\n[2 1 1 1 2 2 1 1 1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nb_classifier.predict_proba(X_test.iloc[0:10]))\n",
+    "print(nb_classifier.predict(X_test.iloc[0:10]))\n",
+    "\n",
+    "# The predict_proba method returns an array containing the prediction for the positive class (1) and the probability for the negative class (2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(190, 25)\n(110, 25)\n(810, 25)\n(590, 25)\n"
+     ]
+    }
+   ],
+   "source": [
+    "young_group = data[data['A13'] == 0]\n",
+    "young_group_good = young_group[young_group['Score'] == 1]\n",
+    "aged_group = data[data['A13'] == 1]\n",
+    "aged_group_good = aged_group[aged_group['Score'] == 1]\n",
+    "\n",
+    "print(young_group.shape)\n",
+    "print(young_group_good.shape)\n",
+    "print(aged_group.shape)\n",
+    "print(aged_group_good.shape)"
+   ]
+  },
+  {
+   "source": [
+    "# Evaluation and comparison"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
