improved classic ml

--- a/implementation/classical_implementation.ipynb
+++ b/implementation/classical_implementation.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 209
+     "execution_count": 5
     }
    ],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -232,35 +232,23 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 212,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[3.24721995e-01 6.75278005e-01]\n [1.00000000e+00 3.48465693e-11]\n [9.79243740e-01 2.07562596e-02]\n [7.77353687e-01 2.22646313e-01]\n [2.28606178e-02 9.77139382e-01]\n [4.93996034e-01 5.06003966e-01]\n [6.57806245e-01 3.42193755e-01]\n [8.53883342e-01 1.46116658e-01]\n [9.97970908e-01 2.02909234e-03]\n [5.05790104e-02 9.49420990e-01]]\n[2 1 1 1 2 2 1 1 1 2]\n"
-     ]
-    }
-   ],
    "source": [
-    "print(nb_classifier.predict_proba(X_test.iloc[0:10]))\n",
-    "print(nb_classifier.predict(X_test.iloc[0:10]))\n",
-    "\n",
-    "# The predict_proba method returns an array containing the prediction for the positive class (1) and the probability for the negative class (2)"
-   ]
+    "## 1.1 Discrimination Measure\n",
+    "We use the KCDM measure to test the Discrimination level present within the dataset."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(190, 25)\n(110, 25)\n(810, 25)\n(590, 25)\n"
+      "190\n110\n810\n590\n0.14944769330734242\n"
      ]
     }
    ],
@@ -270,10 +258,70 @@
     "aged_group = data[data['A13'] == 1]\n",
     "aged_group_good = aged_group[aged_group['Score'] == 1]\n",
     "\n",
-    "print(young_group.shape)\n",
-    "print(young_group_good.shape)\n",
-    "print(aged_group.shape)\n",
-    "print(aged_group_good.shape)"
+    "print(young_group.shape[0])\n",
+    "print(young_group_good.shape[0])\n",
+    "print(aged_group.shape[0])\n",
+    "print(aged_group_good.shape[0])\n",
+    "\n",
+    "discrimination = aged_group_good.shape[0] / aged_group.shape[0] - young_group_good.shape[0] / young_group.shape[0]\n",
+    "print(discrimination)\n"
+   ]
+  },
+  {
+   "source": [
+    "## Apply the CND algorithm"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Next we use the naive bayes classifier to rank the instances by the probability of appearing in the positive class"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identify the two groups, candidates for promotion and candidates for demotion\n",
+    "# these will need identifying along with their index in the real dataset so that their labels can be flipped later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "23.0\n[[3.24721995e-01 6.75278005e-01]\n [1.00000000e+00 3.48465693e-11]\n [9.79243740e-01 2.07562596e-02]\n [7.77353687e-01 2.22646313e-01]\n [2.28606178e-02 9.77139382e-01]\n [4.93996034e-01 5.06003966e-01]\n [6.57806245e-01 3.42193755e-01]\n [8.53883342e-01 1.46116658e-01]\n [9.97970908e-01 2.02909234e-03]\n [5.05790104e-02 9.49420990e-01]]\n[2 1 1 1 2 2 1 1 1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make another column and store the predicted score\n",
+    "\n",
+    "# Order the groups by the scores generated above\n",
+    "\n",
+    "# Calculate how many swaps we need\n",
+    "swaps_required = ( (young_group.shape[0] * aged_group_good.shape[0]) - (aged_group.shape[0] * young_group_good.shape[0]) ) / (young_group.shape[0] + aged_group.shape[0])\n",
+    "\n",
+    "print(swaps_required)\n",
+    "\n",
+    "# Make that many swaps\n",
+    "for i in range(swaps_required):\n",
+    "    make a swap\n",
+    "\n",
+    "# print(nb_classifier.predict_proba(X_test.iloc[0:10]))\n",
+    "# print(nb_classifier.predict(X_test.iloc[0:10]))\n",
+    "\n",
+    "# The predict_proba method returns an array containing the prediction for the positive class (1) and the probability for the negative class (2)"
    ]
   },
   {
