--- a/implementation/classical_implementation.ipynb
+++ b/implementation/classical_implementation.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 62
     }
    ],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,35 +293,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stdout",
+     "name": "stderr",
      "text": [
-      "23.0\n[[3.24721995e-01 6.75278005e-01]\n [1.00000000e+00 3.48465693e-11]\n [9.79243740e-01 2.07562596e-02]\n [7.77353687e-01 2.22646313e-01]\n [2.28606178e-02 9.77139382e-01]\n [4.93996034e-01 5.06003966e-01]\n [6.57806245e-01 3.42193755e-01]\n [8.53883342e-01 1.46116658e-01]\n [9.97970908e-01 2.02909234e-03]\n [5.05790104e-02 9.49420990e-01]]\n[2 1 1 1 2 2 1 1 1 2]\n"
+      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:18: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-83-98e9981d6e49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'rank scores'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnb_predict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'expand'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mcandidates_for_promotion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mA13\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mY_train\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcandidates_for_promotion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1328\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1329\u001b[0m         raise ValueError(\n\u001b[0;32m-> 1330\u001b[0;31m             \u001b[0;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1331\u001b[0m             \u001b[0;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1332\u001b[0m         )\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
      ]
     }
    ],
    "source": [
     "# Make another column and store the predicted score\n",
     "\n",
-    "# Order the groups by the scores generated above\n",
+    "# print(nb_classifier.predict_proba(X_test.iloc[0:10]))\n",
+    "# print(nb_classifier.predict(X_test.iloc[0:10]))\n",
+    "\n",
+    "def nb_predict(row):\n",
+    "    '''\n",
+    "    INPUT: A row from the feature data\n",
+    "    RETURNS: The probability of that row belonging to the positive class\n",
+    "    '''\n",
+    "    a = row.values\n",
+    "    a = a.reshape(1,-1)\n",
+    "    ps = nb_classifier.predict_proba(a)\n",
+    "    return ps[0][0]\n",
+    "\n",
+    "# print(rank(X_test.iloc[0]))\n",
+    "\n",
+    "X_train['rank scores'] = X_train.apply(nb_predict, axis=1, result_type='expand')\n",
+    "\n",
+    "candidates_for_promotion = X_train[X_train.A13==0 and Y_train == 2]\n",
+    "print(candidates_for_promotion.shape)\n",
+    "\n",
+    "# Order the groups by the scores generated ae\n",
     "\n",
     "# Calculate how many swaps we need\n",
     "swaps_required = ( (young_group.shape[0] * aged_group_good.shape[0]) - (aged_group.shape[0] * young_group_good.shape[0]) ) / (young_group.shape[0] + aged_group.shape[0])\n",
     "\n",
-    "print(swaps_required)\n",
-    "\n",
     "# Make that many swaps\n",
-    "for i in range(swaps_required):\n",
-    "    make a swap\n",
-    "\n",
-    "# print(nb_classifier.predict_proba(X_test.iloc[0:10]))\n",
-    "# print(nb_classifier.predict(X_test.iloc[0:10]))\n",
-    "\n",
-    "# The predict_proba method returns an array containing the prediction for the positive class (1) and the probability for the negative class (2)"
+    "for i in range(int(swaps_required)):\n",
+    "    pass\n",
+    "    # Swap the top object from CP\n",
+    "    # Swap the top object from CD\n",
+    "    # remove both from the lists\n"
    ]
   },
   {
